# SGX-Biometrics-Privacy

./: README.md
PP_facial_recognition/: ImageMatching.manifest.template  Makefile  README.md  main  receiver.sh  receiver_encrypt  run_experiments.sh  run_experiments_sgx.sh
PP_facial_recognition/data/: facial_recognition_charts.ipynb  plain_run_10.csv  plain_run_11.csv  plain_run_12.csv  plain_run_13.csv  plain_run_14.csv  plain_run_15.csv
PP_facial_recognition/enc_receiver_query/: receiver_set.enc
PP_facial_recognition/include/: config.h  file_paths.h
PP_facial_recognition/receiver_query/: query_vector.txt
PP_facial_recognition/result/: enc_result.enc
PP_facial_recognition/src/: aes_crypt.cpp  main.cpp  receiver_encrypt.cpp
PP_facial_recognition/tools/: generate_data.sh
PP_fingerpring_matching/: CMakeLists.txt  FingerprintMatching.manifest.template  Makefile  Makefile.save  gallery_list.lis  makecmd.txt  wrap_key
PP_fingerpring_matching/sealing_code/: enc.txt  encrypt_files.py
PP_fingerpring_matching/src/: lib_bozorth3.cpp
PP_record_linkage/: Makefile  README.md  ReceiverSender.manifest  ReceiverSender.manifest.template  create_sender_db.cpp  main.cpp  run_experiment.sh  run_experiments_sgx.sh
PP_record_linkage/.ipynb_checkpoints/: run_experiment-checkpoint.sh  run_experiments_sgx-checkpoint.sh
PP_record_linkage/data/: plain_record_linkage.ipynb  plain_run_results.txt  receiver_results.csv  record_linkage_charts.ipynb  run_results_plain.txt  sender_results_1024.csv  sender_results_1048576.csv  sender_results_131072.csv  sender_results_16384.csv  (+9 more)
(+42 files in other folders)
